--- a/.github/workflows/java-graalvmee.yml
+++ b/.github/workflows/java-graalvmee.yml
@@ -45,4 +45,4 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ghcr.io/lefraudeur/ptero_images:java${{ matrix.tag }_graalvmee
+            ghcr.io/lefraudeur/ptero_images:java${{ matrix.tag }}_graalvmee
