--- a/java-graalvmee/19/Dockerfile
+++ b/java-graalvmee/19/Dockerfile
@@ -11,11 +11,7 @@ RUN         microdnf update -y \
             && microdnf clean all \
             && adduser --home-dir /home/container container \
             && cd /usr/lib/jvm \
-            && (if [[ $(uname -m)="aarch64" ]]; \
-            then arch=aarch64; \
-            else arch=amd64; fi) \
-            && ls -a \
-            && echo "if success" \
+            && if [[ $(uname -m) = aarch64 ]]; then arch=aarch64; else arch=amd64; fi \
             && unzip -o graalvm-ee-java19-22.3.1-${arch}.zip \
             && rm -f graalvm-ee-java19-22.3.1.*
 
