--- a/java-graalvmee/19/Dockerfile
+++ b/java-graalvmee/19/Dockerfile
@@ -15,6 +15,8 @@ RUN         microdnf update -y \
             && zip -FF graalvm-ee-java19-22.3.1-${arch}.zip --out graalvm-ee-java19-22.3.1-${arch}-full.zip \
             && unzip -o graalvm-ee-java19-22.3.1-${arch}-full.zip \
             && rm -f graalvm-ee-java19-22.3.1.*
+            && chown -R container /usr/lib/jvm/graalvm-ee-java19-22.3.1/*
+            && chmod -R 077 /usr/lib/jvm/graalvm-ee-java19-22.3.1/*
 
 
 ENV         PATH=/usr/lib/jvm/graalvm-ee-java19-22.3.1/bin:$PATH
