--- a/java-azulprime/17/Dockerfile
+++ b/java-azulprime/17/Dockerfile
@@ -11,7 +11,7 @@ RUN         microdnf install -y epel-release \
             && microdnf clean all \
             && cd /usr/lib/jvm \
             && if [[ $(uname -m) = aarch64 ]]; then arch=aarch64; else arch=amd64; fi \
-            && 7z -x zing23.03.0.0-3-jdk17.0.6-linux-${arch}.zip \
+            && 7z x zing23.03.0.0-3-jdk17.0.6-linux-${arch}.zip \
             && rm -f zing23.03.0.0-3-jdk17.0.6-linux-* \
             && chmod -R 775 /usr/lib/jvm/zing23.03.0.0-3-jdk17.0.6-linux/*
             
